--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,10 @@
-install:
-- sudo apt-get update -qq
-- sudo apt-get install -y texlive-full texlive-fonts-recommended latexmk
+sudo: false
+addons:
+  apt:
+    packages:
+    - texlive-full
+    - texlive-fonts-recommended
+    - latexmk
 script:
 - cd java-software-engineer
 - latexmk
